2007-12-06  Richard Stallman  <rms@gnu.org>

	* help-fns.el (describe-function-1): Call ad-get-advice-info
	only on symbols.

2007-12-06  Glenn Morris  <rgm@gnu.org>

	* progmodes/antlr-mode.el (antlr-keyword, antlr-syntax)
	(antlr-ruledef, antlr-tokendef, antlr-ruleref-face)
	(antlr-tokenref, antlr-literal): Inherit from standard font-lock
	faces in non-light-background case.

	* add-log.el, dired-aux.el, font-lock.el, help-fns.el, ido.el:
	* informat.el, emacs-lisp/bytecomp.el, emacs-lisp/gulp.el:
	* emacs-lisp/tcover-ses.el, emacs-lisp/timer.el, emulation/edt.el:
	* emulation/vi.el, emulation/viper-cmd.el:
	* international/titdic-cnv.el, mail/emacsbug.el, progmodes/dcl.el:
	* progmodes/prolog.el, progmodes/ps-mode.el, progmodes/python.el:
	* textmodes/fill.el: Remove directory part from filenames in
	function declarations.

	* dired-aux.el (mailcap-mime-info): Update declaration.

2007-12-05  Richard Stallman  <rms@gnu.org>

	* wid-edit.el (widget-type): Doc fix.

2007-12-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/perl-mode.el (perl-font-lock-syntactic-keywords):
	Don't match "sub { (...) ... }".

2007-12-05  Richard Stallman  <rms@gnu.org>

	* international/mule-cmds.el (toggle-input-method-active): New var.
	(toggle-input-method): Bind toggle-input-method-active to t.
	Error if it was already non-nil.

2007-12-05  Reiner Steib  <Reiner.Steib@gmx.de>

	* net/tls.el (tls-hostmismatch, open-tls-stream): Checkdoc cleanup.

2007-12-05  Elias Oltmanns  <eo@nebensachen.de>

	* net/tls.el (open-tls-stream): Actually consult tls-checktrust to
	see if certs should be verified and what is to be done in the
	event of a verification failure.

2007-12-05  Reiner Steib  <Reiner.Steib@gmx.de>

	* net/tls.el (tls-program): Provide more custom choices from
	`tls-checktrust'.  Refer to `tls-checktrust' in doc string.
	(tls-process-connection-type, tls-success): Remove "*" in doc string.
	(tls-checktrust, tls-hostmismatch, tls-untrusted): Add custom